--- a/index.html
+++ b/index.html
@@ -57,6 +57,12 @@
         .whatsapp {
             background-color: #25D366;
         }
+        
+        .dpmcweb {
+            background-color: #0000FF;
+        }
+        ;
+        }
 
         footer {
             margin-top: 30px;
@@ -72,9 +78,10 @@
 
     <h2>CONNECT VIA:</h2>
 
-    <a href="https://facebook.com" target="_blank" class="btn facebook">Facebook</a>
-    <a href="https://instagram.com" target="_blank" class="btn instagram">Instagram</a>
+    <a href="https://www.facebook.com/DPMCLimited/" target="_blank" class="btn facebook">Facebook</a>
+    <a href="https://www.instagram.com/dpmcsrilanka/?hl=en" target="_blank" class="btn instagram">Instagram</a>
     <a href="https://wa.me" target="_blank" class="btn whatsapp">WhatsApp</a>
+    <a href="https://www.dpmco.com/" target="_blank" class="btn dpmcweb">DPMCWEB</a>
 
     <footer>
         &copy; 2025 David Peiris Motor Company. All rights reserved.
