--- a/index.html
+++ b/index.html
@@ -1,92 +1,210 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <title>David Peiris Motor Company</title>
-    <style>
-        body {
-            font-family: 'Segoe UI', sans-serif;
-            background-color: #f4f4f4;
-            margin: 0;
-            padding: 0;
-            text-align: center;
-        }
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>DPMC - Connect With Us</title>
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"/>
+  <style>
+    * {
+      margin: 0;
+      padding: 0;
+      box-sizing: border-box;
+      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    }
 
-        .container {
-            max-width: 700px;
-            margin: 60px auto;
-            background: #ffffff;
-            padding: 40px 20px;
-            border-radius: 10px;
-            box-shadow: 0 10px 30px rgba(0, 0, 0, 0.1);
-        }
+    body {
+      background: linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7)),
+      url('https://images.unsplash.com/photo-1558981403-c5f9899a28bc?auto=format&fit=crop&w=2070&q=80');
+      background-size: cover;
+      background-position: center;
+      min-height: 100vh;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      padding: 20px;
+    }
 
-        h1 {
-            color: #333;
-            margin-bottom: 40px;
-        }
+    .container {
+      background: rgba(255, 255, 255, 0.94);
+      border-radius: 20px;
+      box-shadow: 0 15px 40px rgba(0, 0, 0, 0.6);
+      padding: 40px 30px;
+      width: 100%;
+      max-width: 600px;
+      text-align: center;
+    }
 
-        .btn {
-            display: block;
-            width: 80%;
-            max-width: 300px;
-            margin: 15px auto;
-            padding: 20px;
-            font-size: 20px;
-            color: #fff;
-            font-weight: bold;
-            border: none;
-            border-radius: 8px;
-            cursor: pointer;
-            text-decoration: none;
-            transition: transform 0.2s ease;
-        }
+    .header h1 {
+      font-size: 2.4rem;
+      font-weight: bold;
+    }
 
-        .btn:hover {
-            transform: scale(1.05);
-        }
+    .header h1 .dpmc {
+      color: #1a2a6c;
+    }
 
-        .facebook {
-            background-color: #1877f2;
-        }
+    .header h1 span {
+      color: #FF6600;
+    }
 
-        .instagram {
-            background-color: #e1306c;
-        }
+    .header p {
+      font-size: 1.1rem;
+      margin-top: 10px;
+      color: #444;
+    }
 
-        .whatsapp {
-            background-color: #25D366;
-        }
-        
-        .dpmcweb {
-            background-color: #0000FF;
-        }
-        ;
-        }
+    .social-container {
+      display: flex;
+      flex-direction: column;
+      gap: 20px;
+      margin-top: 30px;
+    }
 
-        footer {
-            margin-top: 30px;
-            font-size: 14px;
-            color: #666;
-        }
-    </style>
+    .social-item {
+      display: flex;
+      align-items: center;
+      justify-content: space-between;
+      border-radius: 15px;
+      padding: 18px 20px;
+      text-decoration: none;
+      transition: all 0.3s ease;
+      font-size: 1.2rem;
+      font-weight: 600;
+      color: white;
+      position: relative;
+      overflow: hidden;
+      transform-origin: center;
+    }
+
+    /* Hover scale effect - reduced scale */
+    .social-item:hover {
+      transform: scale(1.07);
+      box-shadow: 0 10px 20px rgba(0, 0, 0, 0.3);
+      z-index: 10;
+    }
+
+    .icon-container {
+      width: 60px;
+      height: 60px;
+      border-radius: 50%;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      font-size: 1.6rem;
+      background-color: rgba(255, 255, 255, 0.2);
+    }
+
+    /* Pulse Icon Glow Animation */
+    @keyframes blink {
+      0% { box-shadow: 0 0 10px 0 rgba(255,255,255,0.7); }
+      50% { box-shadow: 0 0 20px 10px rgba(255,255,255,0.3); }
+      100% { box-shadow: 0 0 10px 0 rgba(255,255,255,0.7); }
+    }
+
+    /* Button Background Colors */
+    .dpmc-button {
+      background: linear-gradient(to right, #ffa500, #ff6600);
+    }
+
+    .facebook {
+      background: linear-gradient(to right, #1877f2, #3b5998);
+    }
+
+    .instagram {
+      background: linear-gradient(45deg, #f09433, #e6683c, #dc2743, #cc2366, #bc1888);
+    }
+
+    .contact {
+      background: linear-gradient(to right, #d31027, #ea384d);
+    }
+
+    /* Blinking Icon Effects */
+    .dpmc-button .icon-container {
+      animation: blink 2s infinite;
+      box-shadow: 0 0 10px #ff6600;
+    }
+
+    .facebook .icon-container {
+      animation: blink 2s infinite;
+      box-shadow: 0 0 10px #1877f2;
+    }
+
+    .instagram .icon-container {
+      animation: blink 2s infinite;
+      box-shadow: 0 0 10px #dc2743;
+    }
+
+    .contact .icon-container {
+      animation: blink 2s infinite;
+      box-shadow: 0 0 10px #ea384d;
+    }
+
+    .footer {
+      margin-top: 30px;
+      font-size: 0.95rem;
+      color: #666;
+      border-top: 1px solid #eee;
+      padding-top: 20px;
+    }
+
+    .logo {
+      font-weight: bold;
+      font-size: 1.5rem;
+      color: #1a2a6c;
+      margin-top: 10px;
+    }
+
+    @media (max-width: 600px) {
+      .header h1 {
+        font-size: 2rem;
+      }
+      .icon-container {
+        width: 50px;
+        height: 50px;
+        font-size: 1.3rem;
+      }
+    }
+  </style>
 </head>
 <body>
-
 <div class="container">
-    <h1>DAVID PEIRIS MOTOR COMPANY</h1>
+  <div class="header">
+    <h1><span class="dpmc">DPMC</span> <span>Connect via:</span></h1>
+    <p>Connect with David Peries Motor Company through our social channels</p>
+  </div>
 
-    <h2>CONNECT VIA:</h2>
+  <div class="social-container">
+    <!-- DPMC Website -->
+    <a href="https://www.dpmco.com/" class="social-item dpmc-button" target="_blank" rel="noopener noreferrer">
+      <div>DPMC WEBSITE</div>
+      <div class="icon-container"><i class="fas fa-car"></i></div>
+    </a>
 
-    <a href="https://www.facebook.com/DPMCLimited/" target="_blank" class="btn facebook">Facebook</a>
-    <a href="https://www.instagram.com/dpmcsrilanka/?hl=en" target="_blank" class="btn instagram">Instagram</a>
-    <a href="https://wa.me" target="_blank" class="btn whatsapp">WhatsApp</a>
-    <a href="https://www.dpmco.com/" target="_blank" class="btn dpmcweb">DPMCWEB</a>
+    <!-- Facebook -->
+    <a href="https://web.facebook.com/DPMCLimited/" class="social-item facebook" target="_blank" rel="noopener noreferrer">
+      <div>Facebook</div>
+      <div class="icon-container"><i class="fab fa-facebook-f"></i></div>
+    </a>
 
-    <footer>
-        &copy; 2025 David Peiris Motor Company. All rights reserved.
-    </footer>
+    <!-- Instagram -->
+    <a href="https://www.instagram.com/explore/locations/918823375/david-pieris-motor-company-pvt-ltd/" class="social-item instagram" target="_blank" rel="noopener noreferrer">
+      <div>Instagram</div>
+      <div class="icon-container"><i class="fab fa-instagram"></i></div>
+    </a>
+
+    <!-- Contact Us -->
+    <a href="tel:+94114700600" class="social-item contact">
+      <div>Contact Us: +94 (0) 114 700 600</div>
+      <div class="icon-container"><i class="fas fa-phone-alt"></i></div>
+    </a>
+  </div>
+
+  <div class="footer">
+    <p>© 2025 David Peries Motor Company</p>
+    <p>Premium Motorcycle Services & Sales</p>
+    <div class="logo">DPMC</div>
+  </div>
 </div>
-
 </body>
 </html>
